1355: Mirror bot needs branch selection based on patterns
Reviewed-by: kcr, ihse